--- a/client/src/views/Registro/estilo.css
+++ b/client/src/views/Registro/estilo.css
@@ -1,4 +1,4 @@
-.auth-container {
+.register-container {
     min-height: 100vh;
     background: rgba(0, 70, 70, 0.2);
     font-family: sans-serif;
@@ -6,14 +6,14 @@
     place-items: center;
 }
 
-.auth-title {
+.register-title {
     font-size: 1.3125rem;
     font-weight: 700;
     color: #222;
     margin-bottom: 5rem;
 }
 
-.auth-form {
+.register-form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,7 +54,7 @@
     border-color: #4bc0c0;
 }
 
-.submit-button {
+.submit-btn {
     font-size: 0.8125rem;
     line-height: 2rem;
     font-weight: 700;
@@ -70,19 +70,19 @@
     transition: 0.25s;
 }
 
-.submit-button:hover,
-.submit-button:focus {
+.submit-btn:hover,
+.submit-btn:focus {
     outline: none;
     background: #4bc0c0;
     color: #fff;
 }
 
-.auth-links {
+.links {
     margin-top: 10px;
     text-align: center;
 }
 
-.auth-link {
+.link {
     display: block;
     color: #4bc0c0;
     text-decoration: none;
@@ -91,22 +91,16 @@
     transition: 0.3s;
 }
 
-.auth-link:hover,
-.auth-link:focus {
+.link:hover,
+.link:focus {
     color: #000;
     outline: none;
 }
 
-.auth-link:first-of-type {
+.link:first-of-type {
     margin-top: 3em;
 }
 
-.auth-link + .auth-link {
+.link + .link {
     margin-top: 1.125em;
-}
-
-.error-msg {
-    color: red;
-    font-size: 1rem;
-    margin-bottom: 1rem;
 }
