--- a/client/src/views/Login/estilo.css
+++ b/client/src/views/Login/estilo.css
@@ -7,10 +7,7 @@
 }
 
 .auth-title {
-    font-size: 1.3125rem;
-    font-weight: 700;
-    color: #222;
-    margin-bottom: 5rem;
+    max-width:  80%;   
 }
 
 .auth-form {
